css/ioi-oleochemical.webflow.css
/* ... */
.stats55_item-list {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  grid-template-rows: auto;
  padding-top: .5rem;
  padding-bottom: .5rem;
}

.stats55_number {
  color: var(--color-scheme-1--accent);
  font-size: 5rem;
  font-weight: 700;
  line-height: 1.3;
}

.blog44_heading-wrapper {
  grid-column-gap: 5rem;
  grid-row-gap: 1rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr max-content;
  grid-auto-columns: 1fr;
  justify-content: space-between;
  align-items: end;
  display: grid;
}

.blog44_list {
  grid-column-gap: 2rem;
  grid-row-gap: 4rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
  display: grid;
}

.blog44_image {
  aspect-ratio: 3 / 2;
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.blog44_meta-wrapper {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  align-items: center;
  display: flex;
}

.blog44_item-link {
  flex-direction: column;
  justify-content: flex-start;
  height: 100%;
  text-decoration: none;
  display: flex;
}

.blog44_item {
  border: var(--_ui-styles---stroke--border-width) solid var(--color-scheme-1--border);
  border-radius: var(--_ui-styles---radius--medium);
  background-color: var(--color-scheme-1--foreground);
  overflow: hidden;
}

.blog44_title-wrapper {
  margin-bottom: .5rem;
}

.blog44_heading {
  flex: 1;
}

.blog44_item-content {
  flex-direction: column;
  flex: 1;
  justify-content: space-between;
  padding: 1.5rem;
  display: flex;
}

.show-mobile-landscape {
  display: none;
}

.blog44_image-wrapper {
  width: 100%;
  overflow: hidden;
}

.faq5_accordion {
  border: var(--_ui-styles---stroke--border-width) solid var(--color-scheme-1--border);
  border-radius: var(--_ui-styles---radius--large);
  background-color: var(--color-scheme-1--foreground);
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  overflow: hidden;
}

.faq5_question {
  grid-column-gap: 1.5rem;
  grid-row-gap: 1.5rem;
  cursor: pointer;
  justify-content: space-between;
  align-items: center;
  padding: 1.25rem 1.5rem;
  display: flex;
}

.faq5_list {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  grid-template-rows: auto;
  grid-template-columns: 100%;
  grid-auto-columns: 100%;
  place-items: start stretch;
  display: grid;
}

.faq5_icon-wrapper {
  align-self: flex-start;
  width: 2rem;
  display: flex;
}

.faq5_answer {
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  overflow: hidden;
}

.footer12_image {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.footer12_image-item {
  border: 2px solid var(--color-scheme-1--background);
  border-radius: 100%;
  width: 3rem;
  height: 3rem;
  margin-left: -.75rem;
  overflow: hidden;
}

.footer12_top-wrapper {
  grid-column-gap: 8vw;
  grid-row-gap: 1rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr .5fr;
  align-items: start;
}

.footer12_bottom-wrapper {
  justify-content: space-between;
  align-items: center;
  display: flex;
}

.footer12_logo-link {
  float: none;
  object-fit: contain;
  width: 90%;
  padding-left: 0;
}

.footer12_credit-text {
  font-size: .875rem;
}

.footer12_social-list {
  grid-column-gap: .75rem;
  grid-row-gap: 0rem;
  white-space: normal;
  grid-template-rows: auto;
  grid-template-columns: max-content;
  grid-auto-columns: max-content;
  grid-auto-flow: column;
  place-items: start;
  display: flex;
}

.footer12_menu-wrapper {
  grid-column-gap: 2rem;
  grid-row-gap: 1rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  align-items: start;
}

.footer12_link {
  padding-top: .5rem;
  padding-bottom: .5rem;
  font-size: .875rem;
  font-weight: 600;
  text-decoration: none;
}

.footer12_link.w--current {
  color: var(--color-scheme-1--text);
}

.footer12_social-link {
  align-items: center;
  font-size: 14px;
  text-decoration: none;
  display: flex;
}

.footer12_image-list {
  grid-column-gap: 0rem;
  grid-row-gap: 0rem;
  padding-left: .75rem;
  display: flex;
  position: relative;
}

.footer12_link-list {
  flex-direction: column;
  grid-template-rows: auto;
  grid-template-columns: 100%;
  grid-auto-columns: 100%;
  place-items: flex-start start;
  display: flex;
}

.footer12_middle-wrapper {
  justify-content: space-between;
  align-items: center;
  display: flex;
}

.divider-horizontal {
  width: 100%;
  height: var(--_ui-styles---stroke--divider-width);
  background-color: var(--color-scheme-1--border);
}

.portfolio-header9_tag-list {
  grid-column-gap: .5rem;
  grid-row-gap: .5rem;
  flex-flow: wrap;
  display: flex;
}

.portfolio-header9_content {
  grid-column-gap: 5rem;
  grid-row-gap: 5rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  display: grid;
}

.layout419_content-left {
  flex-direction: column;
  justify-content: center;
  justify-self: flex-end;
  width: min(35rem, 100%);
  min-width: 0;
  height: 100vh;
  margin-left: 5vw;
  margin-right: 5rem;
  display: flex;
  position: sticky;
  top: 0;
}

.layout419_component {
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  align-items: start;
  display: grid;
}

.layout419_card-content {
  max-width: 35rem;
}

.layout419_image {
  aspect-ratio: 16 / 9;
  object-fit: cover;
  width: 100%;
}

.layout419_card {
  border-top: var(--_ui-styles---stroke--divider-width) solid var(--color-scheme-1--border);
  background-color: var(--color-scheme-1--foreground);
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  height: 100vh;
  padding: 2.5rem;
  display: flex;
  position: sticky;
  top: 0;
}

.layout419_image-wrapper {
  border-radius: var(--_ui-styles---radius--large);
  width: 100%;
  height: 100%;
  overflow: hidden;
}

.layout396_card-content {
  flex-direction: column;
  flex: 1;
  justify-content: space-between;
  padding: 2rem;
  display: flex;
}
/* ... */

